--- a/Mikus_40K/src/components/Catalog/ProductCatalog.css
+++ b/Mikus_40K/src/components/Catalog/ProductCatalog.css
@@ -3,7 +3,7 @@
 .catalog-container {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 30px;
   padding: 20px;
   justify-items: center;
   margin: 0 auto;
@@ -14,9 +14,10 @@
 .catalog-item {
   display: flex;
   flex-direction: row;
-  background-color: #EFEFEF; /*1e1e1e*/
+  border-radius: 10px !important;
+  background-color: #0D407F; /*1e1e1e*/
   border-radius: 1px;
-  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.7);
   overflow: hidden;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   width: 100%;
@@ -42,7 +43,7 @@
 .item-title {
   font-size: 1rem;
   font-weight: 700;
-  color: #9e8600; /* FFD700 */
+  color: #D3B587; /* FFD700 */
   margin-right: 5vh;
   line-height: 1.3;
   text-transform: capitalize;
@@ -52,7 +53,7 @@
 .item-price {
   font-size: 1.2rem;
   font-weight: 600;
-  color: #007c7c; /* 86ecec */
+  color: #EFBF04; /* 86ecec */
   line-height: 1.4;
   margin-right: 2.5vh;
 }
@@ -60,7 +61,7 @@
 .item-shipping {
   font-size: 1rem;
   font-weight: 500;
-  color: #858585;
+  color: #86ecec;
   margin-top: 8px;
   line-height: 1.4;
 }
