--- a/Mikus_40K/src/components/product/Product.css
+++ b/Mikus_40K/src/components/product/Product.css
@@ -51,7 +51,7 @@
   border-radius: 10px;
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: #EFEFEF;
+  background-color: #0D407F !important;
   width: 200px;
   color: #333;
   position: relative; /* Necesario para posicionar el botón de favorito */
@@ -67,24 +67,24 @@
 .product-card h3 {
   font-size: 1.2rem;
   margin: 5px 0;
-  color: #9e8600; /* FFD700 */
+  color: #D3B587; /* FFD700 */
 }
 
 .product-card .price {
   font-size: 1.4rem;
-  color: #007c7c; /* 86ecec */
+  color: #EFBF04 !important; /* 86ecec */
   font-weight: bold;
 }
 
 .product-card .shipping {
   font-size: 1rem;
-  color: #979797;
+  color: #86ecec !important;
   margin-top: 5px;
 }
 
 .product-card .description {
   font-size: 0.9rem;
-  color: #646464; /* c7c7c7 */
+  color: #ffffff; /* c7c7c7 */
   margin-top: 5px;
 }
 
