--- a/Mikus_40K/src/components/sidebar/Sidebar.css
+++ b/Mikus_40K/src/components/sidebar/Sidebar.css
@@ -2,7 +2,7 @@
 .sidebar {
   width: 250px; /* Tamaño del sidebar en pantallas grandes */
   height: 100vh; /* Ocupa toda la altura de la página */
-  background-color: #fffaf0;
+  background-color: #FFFAFA;
   color: white;
   position: fixed;
   top: 0;
