--- a/Mikus_40K/src/components/Footer/Footer.css
+++ b/Mikus_40K/src/components/Footer/Footer.css
@@ -3,6 +3,7 @@
   color: #fff;
   padding: 20px 10px;
   font-size: 14px;
+  z-index: 1101;
 }
 
 .footer-content {
@@ -41,4 +42,20 @@ html, body {
 #root-container {
   position: relative;
   min-height: 100%;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+#root-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.App {
+  flex: 1; /* Asegura que el contenido principal ocupe el espacio disponible */
 }
