--- a/Mikus_40K/src/components/helpCenter/ContactSupport.css
+++ b/Mikus_40K/src/components/helpCenter/ContactSupport.css
@@ -7,23 +7,22 @@
     justify-content: center;
     padding: 20px;
     font-family: 'Arial', sans-serif;
-    background-color: rgb(36, 36, 36); /* Color del navbar */
     min-height: 100vh;
     text-align: center;
-    color: #0eeadf; /* Color de texto del navbar-text */
+    color: #000000; /* Color de texto del navbar-text */
   }
   
   .contact-title {
     font-size: 2rem;
     margin-bottom: 20px;
-    color: #ffffff; /* Texto blanco para el título */
+    color: #003392; /* Texto blanco para el título */
   }
-  
+   
   .contact-info {
     font-size: 1rem;
     margin: 10px 0;
   }
   
   .contact-detail {
-    color: #0eeadf; /* Azul claro del tema */
+    color: #000000; /* Azul claro del tema */
   }
