--- a/Mikus_40K/src/components/AboutUs/AboutUs.css
+++ b/Mikus_40K/src/components/AboutUs/AboutUs.css
@@ -1,8 +1,7 @@
 /* src/components/AboutUs.css */
 
 .about-us-container {
-    background-color: rgb(36, 36, 36); /* Fondo oscuro como el navbar */
-    color: #0eeadf; /* Texto en azul claro */
+    color: #003392; /* Texto en azul claro */
     padding: 20px;
     min-height: 100vh;
     font-family: 'Arial', sans-serif;
@@ -14,13 +13,13 @@
   
   .about-title {
     font-size: 2.5rem;
-    color: #ffffff; /* Título en blanco */
+    color: #000000; /* Título en blanco */
     margin-bottom: 20px;
   }
   
   .about-description {
     font-size: 1rem;
     margin-bottom: 15px;
-    color: #dddddd; /* Texto secundario en gris claro */
+    color: #000000; /* Texto secundario en gris claro */
     line-height: 1.5;
   }
