--- a/Mikus_40K/src/components/Footer/Footer.css
+++ b/Mikus_40K/src/components/Footer/Footer.css
@@ -1,3 +1,11 @@
+.footer {
+  background-color: #333;
+  color: #fff;
+  padding: 20px 10px;
+  font-size: 14px;
+  z-index: 1100;
+  position: relative;
+}
 
 .footer-content {
   max-width: 1200px;
@@ -35,4 +43,20 @@ html, body {
 #root-container {
   position: relative;
   min-height: 100%;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+#root-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.App {
+  flex: 1; /* Asegura que el contenido principal ocupe el espacio disponible */
 }
