--- a/Mikus_40K/src/components/Login/register.css
+++ b/Mikus_40K/src/components/Login/register.css
@@ -19,6 +19,44 @@
     margin-bottom: 20px;
 }
 
+/* Estilo del mensaje emergente */
+.modal {
+    display: none;
+    position: fixed;
+    top: 140px; /* Ajusta la distancia desde la parte superior */
+    right: -300px; /* Comienza fuera de la pantalla */
+    padding: 15px;
+    background-color: rgba(243, 0, 0, 0.8);
+    color: white;
+    border-radius: 8px;
+    font-size: 1rem;
+    z-index: 3000;
+    text-align: center;
+    animation: slideIn 0.5s ease-out forwards, fadeOut 1s 5s forwards;
+    animation-fill-mode: forwards;
+}
+
+/* Animación de deslizamiento */
+@keyframes slideIn {
+    from {
+        right: -300px; /* Comienza fuera de la pantalla */
+    }
+    to {
+        right: 20px; /* Llega a la posición final */
+    }
+}
+
+/* Animación de desvanecimiento */
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+
 /* Estilo del formulario */
 .register-form {
     display: flex;
