--- a/Mikus_40K/src/components/Catalog/SearchResults.css
+++ b/Mikus_40K/src/components/Catalog/SearchResults.css
@@ -11,6 +11,7 @@
     overflow: hidden;
     background-color: #fff;
     transition: transform 0.2s, box-shadow 0.2s;
+    margin-top: 0%;
   }
   
   .result-item:hover {
