--- a/Mikus_40K/src/components/sidebar/SidebarUser.css
+++ b/Mikus_40K/src/components/sidebar/SidebarUser.css
@@ -4,8 +4,8 @@
   left: -400px; /* Inicia fuera de la pantalla */
   top: 0;
   height: 100%; /* Ocupa toda la altura */
-  background-color: #1F1F1F; /* Gris muy oscuro */
-  color: #39C5BB; /* Turquesa */
+  background-color: #1c1c1c; /* Fondo oscuro */
+  color: #00d7d7; /* Texto cian vibrante */
   padding: 20px;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
   z-index: 2001;
@@ -40,7 +40,7 @@
   margin-bottom: 10px;
   font-size: 1.1rem;
   font-weight: bold;
-  color: #4284ff;
+  color: #ffd700; /* Títulos en dorado */
   transition: font-size 0.3s ease;
 }
 
@@ -51,15 +51,16 @@
 
 .sidebar-section li {
   margin-bottom: 10px;
+  color: #00d7d7; /* Texto cian */
 }
 
 /* Estilo para los botones del sidebar */
 .sidebar-section button {
   width: 100%;
   padding: 10px;
-  background-color: #39C5BB;
-  border: 1px solid #4b4b4b;
-  color: #ffffff;
+  background-color: #00d7d7; /* Fondo cian */
+  border: 1px solid #ffd700; /* Borde dorado */
+  color: #ffffff; /* Texto blanco */
   border-radius: 5px;
   cursor: pointer;
   text-align: left;
@@ -68,9 +69,9 @@
 }
 
 .sidebar-section button:hover {
-  background-color: #63b1b1;
-  border: 1px solid rgb(146, 255, 255);
-  color: #F5F5F5;
+  background-color: #ffd700; /* Fondo dorado al pasar el cursor */
+  border: 1px solid #00d7d7; /* Borde cian */
+  color: #1c1c1c; /* Texto oscuro */
 }
 
 .sidebar-section button:focus {
@@ -83,23 +84,24 @@
 }
 
 .sidebar-user::-webkit-scrollbar-track {
-  background-color: #3A3A3A;
+  background-color: #3a3a3a; /* Fondo del scrollbar */
   border-radius: 10px;
 }
 
 .sidebar-user::-webkit-scrollbar-thumb {
-  background-color: #5A5A5A;
+  background-color: #5a5a5a; /* Scrollbar en gris */
   border-radius: 10px;
 }
 
 .sidebar-user::-webkit-scrollbar-thumb:hover {
-  background-color: #39C5BB;
+  background-color: #00d7d7; /* Scrollbar cian al pasar el cursor */
 }
+
 /* Media Query para pantallas pequeñas (móviles) */
 @media (max-width: 500px) {
   /* Ajustar el ancho del sidebar para que ocupe un porcentaje más pequeño en móviles */
   .sidebar-user {
-    width: 30vw; /* Sidebar ocupa el 60% del ancho de la ventana */
+    width: 30vw; /* Sidebar ocupa el 30% del ancho de la ventana */
   }
 
   /* Ajustar el padding y márgenes en el sidebar para que sea más compacto */
